--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,3 +2,29 @@
     margin: 0;
     padding: 0;
 }
+
+main{
+
+    background-color: rgba(14, 105, 162, 0.2);
+    height: 800px;
+    width: 100%;
+    bottom: 100px;
+    position: fixed;
+    left: 0;
+}
+
+footer{
+    display: flex;
+    background-color: rgba(14, 105, 162, 0.93);
+    height: 100px;
+    width: 100%;
+
+
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+    color: white;
+    text-align: center;
+}
